Bug 108107 - FILEOPEN XLSX: Data Series label font settings are not inherited by the labels in a line chart
Summary: FILEOPEN XLSX: Data Series label font settings are not inherited by the label...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.5.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart Chart-Labels
  Show dependency treegraph
 
Reported: 2017-05-26 09:50 UTC by Gabor Kelemen (Collabora)
Modified: 2020-01-28 09:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2013 (21.12 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-05-26 09:50 UTC, Gabor Kelemen (Collabora)
Details
The file in Excel 2013 with a font size of 18 points (75.31 KB, image/png)
2017-05-26 09:52 UTC, Gabor Kelemen (Collabora)
Details
Font settings of the data series on LO 5.4beta1 (97.53 KB, image/png)
2017-05-26 09:52 UTC, Gabor Kelemen (Collabora)
Details
Font settings of one label in the data series on LO 5.4beta1 (95.53 KB, image/png)
2017-05-26 09:53 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-05-26 09:50:20 UTC
Created attachment 133603 [details]
Example file from Excel 2013

Attached file has a line chart and one of the lines has visible labels.

The data series has a custom font setting of Arial 18p for these labels, this is imported correctly.

However the individual data labels in the data series do not inherit this setting and have some sort of default setting of Calibri 10p. 

This results in barely readable labels for this line of the chart.
Comment 1 Gabor Kelemen (Collabora) 2017-05-26 09:52:03 UTC
Created attachment 133604 [details]
The file in Excel 2013 with a font size of 18 points
Comment 2 Gabor Kelemen (Collabora) 2017-05-26 09:52:49 UTC
Created attachment 133605 [details]
Font settings of the data series on LO 5.4beta1

This seems to be correctly read.
Comment 3 Gabor Kelemen (Collabora) 2017-05-26 09:53:40 UTC
Created attachment 133606 [details]
Font settings of one label in the data series on LO 5.4beta1

This is not the same setting for one item in the series.
Comment 4 Buovjaga 2017-06-04 13:13:26 UTC
Yep.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.5.0.0.alpha0+
Build ID: c855400e9686ddd8bcba5691393f839f6f52c966
CPU threads: 8; OS: Linux 4.11; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on June 2nd 2017

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 5 QA Administrators 2018-06-05 02:38:23 UTC Comment hidden (obsolete)
Comment 6 Thomas Lendo 2018-09-20 20:40:52 UTC
Still reproducible.

Version: 6.2.0.0.alpha0+
Build ID: 62cd86977ca41677c56fb2d1f97bb1c5cbdbd416
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: de-DE (de_DE.UTF-8); Calc: threaded; Build from yesterday
Comment 7 Commit Notification 2020-01-28 09:02:40 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/296f3f8e4a5337b82fc72845662b5d5749acdf99

tdf#108107 OOXML chart: fix format of custom data point labels

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.