tdf#108107 OOXML chart: fix format of custom data point labels

Do not overwrite the property of moved data point labels
with default values, but use the data series properties for
these labels.

Change-Id: Id27fa1c2d8286584b2b87b7eb7a64fd9b416dc34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87463
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>